Resolves: tdf#114728 wrong entries in bibliographic entry dialog

Change-Id: I15f889c108805075c716d21af84c13f98f4e7226
Reviewed-on: https://gerrit.libreoffice.org/47594
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>